fixed connect_logo and pdf spacing

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -317,6 +317,10 @@ html {
         text-align: center;
 }
 
+#aboutme_section{
+    padding-bottom: 10%;
+}
+
 #connect_logos{
     align-content: center;
     padding: 2%;
